--- a/vue시작하기/실습코드/component-same-level.html
+++ b/vue시작하기/실습코드/component-same-level.html
@@ -8,29 +8,40 @@
 </head>
 <body>
     <div id="app">
-        <app-header></app-header>
-        <app-content></app-content>
+        <app-header v-bind:propsdata = "num"></app-header>
+        <app-content v-on:pass="deliverNum"></app-content>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
         var appHeader = {
-            template: '<div> header </div>'
+            template: '<div> header </div>',
+            props: ['propsdata']
         }
 
         var appContent = {
-            template: '<div> content <button> pass </button> </div>',
+            template: '<div> content <button v-on:click="passNum"> pass </button> </div>',
             methods: {
                 passNum: function() {
                     this.$emit('pass', 10);
                 }
             }
         }
+
+        // 인스턴스 생성
         new Vue({
             el: '#app',
             components: {
                 'app-header': appHeader,
                 'app-content': appContent
+            },
+            data: {
+                num: 0
+            },
+            methods: {
+                deliverNum: function(value) {
+                    this.num = value;
+                }
             }
         })
     </script>
